Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -166,7 +166,8 @@ body > nav, body > main, body > aside, body > footer
   { background: Canvas }
 body > nav
   { box-shadow: var(--shadow) }
-body > main {scroll-snap-align: start }
+body > main
+  { scroll-snap-align: start }
 body > aside
   { background: ButtonFace }
 body > footer
